set authorization flow that redirects to kroger's sign in page

--- a/lib/kart_web/templates/page/index.html.eex
+++ b/lib/kart_web/templates/page/index.html.eex
@@ -1,5 +1,8 @@
 <section class="row">
+  <a href="/oauth/authorize">
+    Authroize Url
+  </a>
   <a href="/oauth">
-    Connect to Kroger
+    Get token
   </a>
 </section>
