Remove phx logo and some other unneeded ui things in the nav bar. also formatting

--- a/lib/kart_web/templates/page/index.html.eex
+++ b/lib/kart_web/templates/page/index.html.eex
@@ -10,5 +10,10 @@
         Search Products
       </a>
     </li>
+    <li>
+      <a href="/lists">
+        Grocery Lists
+      </a>
+    </li>
   </ul>
 </section>
