--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -46,6 +46,9 @@ select {
   min-width: 300px;
   margin: 1rem;
   display: block;
+  text-decoration: none;
+  font-size: 48px;
+  color: black;
 }
 .phx-logo img {
   width: auto;
